# fern-ridge

./: README.md  pyproject.toml
magnum_monitor/: __init__.py  cli.py  constants.py  decoder.py  framing.py  models.py  serial_io.py
tests/: test_decoder.py  test_framing.py  test_models.py
